chore: Merge Summer into Winter (#3309)

--- a/packages/design-system/ui/components/tabs/docs.mdx
+++ b/packages/design-system/ui/components/tabs/docs.mdx
@@ -215,7 +215,7 @@ Overflowing subtabs are contained in a More dropdown.
 
 ## Vertical
 
-To use vertical tabs, check out the [Vertical Tabs](../components/vertical-tabs) component
+To use vertical tabs, check out the [Vertical Tabs](../vertical-tabs) component
 
 <Example title="Tabs as Vertical">
   {VerticalTabs}
