fix(stacked-checkbox): Update font size for stacked checkbox labels (#3320)

--- a/packages/design-system/ui/components/form-element/docs.mdx
+++ b/packages/design-system/ui/components/form-element/docs.mdx
@@ -148,7 +148,7 @@ To vertically stack `<label>` and `<input>` pairs, place `slds-form_stacked` on 
 
 <Example title="Form Layout - Stacked">
   <CodeView>
-    <Form className="slds-form_stacked"/>
+    <Form isStacked/>
   </CodeView>
 </Example>
 
@@ -158,7 +158,7 @@ To horizontally align a `<label>` and `<input>`, use the `slds-form_horizontal` 
 
 <Example title="Form Layout - Horizontal">
   <CodeView>
-    <Form className="slds-form_horizontal"/>
+    <Form isHorizontal/>
   </CodeView>
 </Example>
 
