fix(panels): Update animated panels to be position:fixed in mobile tabs (#3324)

--- a/packages/design-system/ui/components/tabs/docs.mdx
+++ b/packages/design-system/ui/components/tabs/docs.mdx
@@ -288,7 +288,7 @@ When there are two or more immediately adjacent tab sets on mobile, use the `sld
 ### Nested Tab Sets
 
 <Example title="Tabs Mobile Nested">
-  <CodeView>
+  <CodeView style={{height: '300px'}}>
     <NestedMobileStacked/>
   </CodeView>
 </Example>
